[tool.poetry]
name = "testeunitario-trabalho2"
version = "0.1.0"
description = ""
authors = ["Felipe Meyer <ffmeyer@gmail.com>"]
readme = "README.md"
packages = [{include = "testeunitario_trabalho2"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
isort = "^5.12.0"
pip-audit = "^2.6.1"
blue = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
